--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   just_audio: ^0.9.37
   http: ^1.2.1
   path_provider: ^2.1.3
+  audioplayers: ^6.0.0
+  flutter_secure_storage: ^4.2.1
   
 
 
